updated the templates to use bootstrap

--- a/courses/templates/course.html
+++ b/courses/templates/course.html
@@ -12,6 +12,7 @@
   {% for comment in comments %}
   <li>
     <p>{{comment.text}}</p>
+    <p>Score: {{comment.score}}</p>
   </li>
   {% endfor %}
 </ul>
