--- a/templates/base.html
+++ b/templates/base.html
@@ -25,13 +25,22 @@
         <a class="navbar-brand" href="#">Iupi Hub</a>
         <ul class="nav justify-content-end">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="{% url 'home:index'%}"
+              >Home</a
+            >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="courses/all">Courses</a>
+            <a class="nav-link" href="{% url 'courses:all_courses'%}"
+              >Courses</a
+            >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="professors/all">Profesores</a>
+            <a class="nav-link" href="{% url 'professors:all_professors' %}"
+              >Profesores</a
+            >
           </li>
           <div class="login-buttons">
             <button type="button" class="btn btn-primary">Login</button>
