--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,10 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
+    />
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     <title>Iupi Hub</title>
