--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,19 +29,20 @@
 .confession-icon {
   display: flex;
   align-items: flex-start;
+  font-size: larger;
+}
+.confession-icon i {
+  padding-right: 0.2rem;
 }
 .confession-icon p {
+  margin-bottom: 0;
   margin-left: 0.2rem;
 }
-.bi-heart-fill:hover {
-  color: red;
-}
-.title {
-  color: red;
-}
-.bi-chat-square-fill:hover {
-  color: blue;
-}
-.bi-share-fill:hover {
-  color: yellow;
+@media screen and (max-width: 820px) {
+  h1 {
+    font-size: xx-small;
+  }
+  .confession-icon {
+    font-size: xx-large;
+  }
 }
