--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
     />
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+    {% block head %} {% endblock %}
     <title>Iupi Hub</title>
   </head>
   <body>
