attempt to create professor front end with bootstrap

--- a/courses/templates/course.html
+++ b/courses/templates/course.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+
+{% block content %}
 <ul>
   <li>
     <p>{{ course.name }}</p>
@@ -16,3 +19,4 @@
   </li>
   {% endfor %}
 </ul>
+{% endblock %}
