--- a/professors/templates/professor.html
+++ b/professors/templates/professor.html
@@ -1,4 +1,7 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} 
+
+{% block content %}
+
 <h1>{{ professor.first_name }} {{ professor.last_name }}</h1>
 <h2>Average Grade: {{ professor.average_grade }}</h2>
 {% endblock %}
