added black to the project & refactored everything

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -49,7 +49,9 @@
             <button class="btn btn-outline-light" type="button">Log In</button>
           </a>
           <a href="{% url 'accounts:register' %}">
-            <button class="btn btn-outline-light" type="button">Register</button>
+            <button class="btn btn-outline-light" type="button">
+              Register
+            </button>
           </a>
         </div>
       </li>
