--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block content %} {% load crispy_forms_filters %} {%load crispy_forms_tags %}
+{% extends 'base.html' %} {% block content %} {% load crispy_forms_filters %}
+{%load crispy_forms_tags %}
 <div class="container">
   <h2>Log In</h2>
   <form method="post">
