made the number of comments be the actual count

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -50,13 +50,14 @@
         </div>
         <div class="confession-icon">
           <i class="bi bi-chat-right-text"></i>
-          <p>6</p>
+          <p>{{confession.num_comments}}</p>
         </div>
         <div class="confession-icon">
           <i class="bi bi-share-fill"></i>
         </div>
       </div>
     </div>
-    {% endfor %} {% endblock %}
+    {% endfor %}
   </div>
 </div>
+{% endblock %}
