--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,12 +15,12 @@ a {
   margin-left: 0.5rem;
 }
 .btn-primary {
-  background-color: red;
-  border-color: red;
-}
-.btn-primary:hover {
   background-color: #212529;
   border-color: #212529;
+}
+.btn-primary:hover {
+  background-color: red;
+  border-color: red;
 }
 .confession {
   background-color: #212529 !important;
@@ -45,6 +45,12 @@ a {
 .confession-icon p {
   margin-bottom: 0;
   margin-left: 0.2rem;
+}
+.footer {
+  background-color: #212529;
+  color: white;
+  padding: 1rem;
+  margin-top: 3rem;
 }
 @media screen and (max-width: 820px) {
   h1 {
