--- a/static/css/professors.css
+++ b/static/css/professors.css
@@ -1,36 +1,73 @@
+select {
+  width: 100%;
+  height: 2.5rem;
+  border: 1px solid #ccc;
+  border-radius: 0.25rem;
+  padding: 0 0.5rem;
+  font-size: 1rem;
+  color: #333;
+  background-color: #fff;
+  background-image: none;
+  background-clip: padding-box;
+  box-shadow: none;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
 .container {
-    justify-content: space-between;
-    margin-top: 1rem;
+  justify-content: space-between;
+  margin-top: 1rem;
 }
 
+.search-bar {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.controls {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.content {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
 .professors {
-    width: 95%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
+  width: 95%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
 }
 
 .card-title {
-    color: red; 
-    font-size: large;
+  color: red;
+  font-size: large;
 }
 
 .card-link {
-    color: black; 
-    text-decoration: none;
+  color: black;
+  text-decoration: none;
 }
 
 .card-link:hover {
-    color: rgb(150, 32, 32); 
-    text-decoration: none;
+  color: rgb(150, 32, 32);
+  text-decoration: none;
 }
 
 .card-text {
-    margin-bottom: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .professor {
-    max-width: 33%;
+  max-width: 33%;
+}
+.dropdown {
+  margin-left: 1rem;
 }
