--- a/professors/templates/create_professor.html
+++ b/professors/templates/create_professor.html
@@ -1,12 +1,13 @@
-{% extends 'base.html' %} {% block content %} {% load crispy_forms_filters %}
-{%load crispy_forms_tags %}
-<div class="container">
-  <h2>Create Professor</h2>
-  <form method="post">
-    {% csrf_token %} {{ form|crispy }}
-    <button class="btn btn-dark" type="submit">Create</button> {% if error %}
-    <p class="error">{{ error }}</p>
-    {% endif %}
-  </form>
-</div>
+{% extends 'base.html' %}
+{% block content %}
+    {% load crispy_forms_filters %}
+    {% load crispy_forms_tags %}
+    <div class="container">
+        <h2>Create Professor</h2>
+        <form method="post">
+            {% csrf_token %} {{ form|crispy }}
+            <button class="btn btn-dark" type="submit">Create</button>
+            {% if error %}<p class="error">{{ error }}</p>{% endif %}
+        </form>
+    </div>
 {% endblock %}
