--- a/professors/templates/professor.html
+++ b/professors/templates/professor.html
@@ -1,41 +1,102 @@
 {% extends 'base.html' %}
 {% block head %}
-{% load static %} 
-{% load crispy_forms_filters %} 
-{%load crispy_forms_tags %}
-<link rel="stylesheet" href="{% static 'css/professor.css' %}" />
-{% block title %}
-    <title>{{profesor.first_name}}</title>
+    {% load static %}
+    {% load crispy_forms_filters %}
+    {% load crispy_forms_tags %}
+    <link rel="stylesheet" href="{% static 'css/professor.css' %}" />
+    {% block title %}<title>{{ profesor.first_name }}</title>{% endblock %}
 {% endblock %}
-{% endblock %}
-
 {% block content %}
-<div class="professor container">
-    <div class="head">
-        <h1 class="name">{{professor.first_name}} {{professor.last_name}}</h1>
-        <img src="{% static 'img/{{professor.college}}.png' %}" alt="">
+    <div class="professor container-lg mb-4 mt-4">
+        <div class="card">
+            <div class="d-flex card-header align-items-center">
+                <h1>{{ professor.first_name }} {{ professor.last_name }}</h1>
+                <img src="https://scontent.fsju1-1.fna.fbcdn.net/v/t1.6435-9/48396515_2081243305286968_6358412517215043584_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=174925&_nc_ohc=B4_NdJJvmCgAX9tzO7m&_nc_ht=scontent.fsju1-1.fna&oh=00_AfDWOU91TrpsHxrEh4LjVFH9FwW-vbpQsY4bTXOSi5ORjA&oe=63E197EE"
+                     alt=""
+                     class="img-responsive"
+                     width="35"
+                     height="35">
+            </div>
+            <div class="card-body">
+                <div class="statistics row">
+                    <h3 class="text-center">Estadisticas Promedio</h3>
+                    <div class="col d-flex justify-content-center">
+                        <div class="d-flex flex-column">
+                            <div class="d-flex align-items-center">
+                                <p class="m-0">Dificultad</p>
+                                <i class="bi bi-dot"></i>
+                                <p class="m-0">{{ professor.average_difficulty }}</p>
+                            </div>
+                            <div class="d-flex align-items-center">
+                                <p class="m-0">Nota Obtenida</p>
+                                <i class="bi bi-dot"></i>
+                                <p class="m-0">{{ professor.average_grade }}</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col d-flex justify-content-center">
+                        <div class="d-flex flex-column">
+                            <div class="d-flex align-items-center">
+                                <p class="m-0">Pro estudiante</p>
+                                <i class="bi bi-dot"></i>
+                                <p class="m-0">{{ professor.average_pro_student }}</p>
+                            </div>
+                            <div class="d-flex align-items-center">
+                                <p class="m-0">Organizado</p>
+                                <i class="bi bi-dot"></i>
+                                <p class="m-0">{{ professor.average_organized }}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="statistics">
-        <ul>
-            <li>
-                <h3>Dificultad</h3>
-                <p>{{professor.average_difficulty}}</p>
-            </li>
-            <li>
-                <h3>Nota</h3>
-                <p>{{professor.average_grade}}</p>
-            </li>
-            <li>
-                <h3>Organizado</h3>
-                <p>{{professor.average_organized}}</p>
-            </li>
-            <li>
-                <h3>Pro Estudiante</h3>
-                <p>{{professor.average_pro_student}}</p>
-            </li>
-
-        </ul>
+    <div class="courses container mb-4 mt-4 ">
+        <h2 class="text-center m-4">Cursos</h2>
+        <div class="row">
+            {% for course in courses %}
+                <a href="{% url 'courses:specific_course' course.pk %}"
+                   class="col-4 mt-4">
+                    <div class="">
+                        <div class="card">
+                            <div class="card-header">
+                                <h3>{{ course.codification }}</h3>
+                            </div>
+                            <div class="card-body">
+                                <p>{{ course.name }}</p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            {% endfor %}
+        </div>
     </div>
-</div>
+    <div class="comments container mb-4 mt-4">
+        <h2 class="text-center m-4">Comentarios</h2>
+        {% for comment in comments %}
+            <div class="comment card mb-4"">
+                <div class="card-header">
+                    <h3>{{ comment.course.codification }}</h3>
+                </div>
+                <div class="card-body">
+                    <p>{{ comment.text }}</p>
+                    <div class="d-flex justify-content-between">
+                        <div class="d-flex">
+                            <div class="d-flex align-items-center">
+                                <p class="m-0">{{ comment.user.first_name }} {{ comment.user.last_name }}</p>
+                                <i class="bi bi-dot"></i>
+                                <p class="m-0">{{ comment.updated_at }}</p>
+                            </div>
+                        </div>
+                        <div class="d-flex align-items-center">
+                            <p class="m-0">{{ comment.score }}</p>
+                            <i class="bi bi-hand-thumbs-up"></i>
+                            <i class="bi bi-hand-thumbs-down"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 {% endblock %}
-
