--- a/courses/templates/course_list.html
+++ b/courses/templates/course_list.html
@@ -1,17 +1,17 @@
 {% extends 'base.html' %}
-
 {% block content %}
-<ul>
-  <!-- Iterate over object_list -->
-  {% for object in object_list %}
-  <!-- Display Objects -->
-  <li><a href="{{object.pk}}">{{ object.name }}</a></li>
-  <li>{{ object.average_grade }}</li>
-
-  <hr />
-  <!-- If object_list is empty  -->
-  {% empty %}
-  <li>No objects yet.</li>
-  {% endfor %}
-</ul>
+    <ul>
+        <!-- Iterate over object_list -->
+        {% for object in object_list %}
+            <!-- Display Objects -->
+            <li>
+                <a href="{{ object.pk }}">{{ object.name }}</a>
+            </li>
+            <li>{{ object.average_grade }}</li>
+            <hr />
+            <!-- If object_list is empty  -->
+        {% empty %}
+            <li>No objects yet.</li>
+        {% endfor %}
+    </ul>
 {% endblock %}
