--- a/templates/base.html
+++ b/templates/base.html
@@ -2,19 +2,11 @@
 <html lang="en">
     <head>
         {% load static %}
+        {% load static tailwind_tags %}
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-              rel="stylesheet"
-              integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-              crossorigin="anonymous"/>
-        <link rel="stylesheet"
-              href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"/>
-        <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-                crossorigin="anonymous"></script>
+        {% tailwind_css %}
         {% block head %}
             {% block title %}{% endblock %}
         {% endblock %}
@@ -27,6 +19,7 @@
         <div class="content">
             {% block content %}{% endblock %}
         </div>
-        {% include 'footer.html' %}
+        <!-- {% include 'footer.html' %} -->
+        <script src="{% static 'js/navbar.js' %}"></script>
     </body>
 </html>
