--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,53 +1,75 @@
+{% load static %}
 {% if user.is_authenticated %}
-    <nav class="navbar navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home:index' %}">Iupi Hub</a>
-            <ul class="nav justify-content-end">
-                <li class="nav-item">
-                    <a class="nav-link active"
-                       aria-current="page"
-                       href="{% url 'home:index' %}">Home</a
-                        >
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'courses:all_courses' %}">Courses</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'professors:all_professors' %}">Profesores</a
-                            >
-                        </li>
-                    </ul>
+    <nav class="container flex flex-row mx-auto justify-between my-4">
+        <!-- logo section -->
+        <div class="flex flex-row items-center">
+            <div>
+                <a href="{% url 'home:index' %}">
+                    <img src="{% static 'img/logo.svg' %}"
+                         alt="logo"
+                         class="logo dark:fill-white"/>
+                </a>
+            </div>
+            <div>
+                <h1 class="hidden text-black md:block">University Hub</h1>
+            </div>
+        </div>
+        <!-- links section -->
+        <div class="hidden flex-row items-center space-x-4 md:flex">
+            <a href="{% url 'home:index' %}" class="link">Home</a>
+            <a href="{% url 'courses:all_courses' %}" class="link">Cursos</a>
+            <a href="{% url 'professors:all_professors' %}" class="link">Profesores</a>
+            <a href="#" class="link">Confesiones</a>
+        </div>
+    </nav>
+{% else %}
+    <nav>
+        <div class="container flex flex-row mx-auto justify-between items-center my-4"
+            <!-- logo section -->
+            <div class="flex flex-row justify-center items-center">
+                <div>
+                    <a href="{% url 'home:index' %}">
+                        <img src="{% static 'img/logo.svg' %}"
+                            alt="logo"
+                            class="mx-4 md:mx-0"/>
+                    </a>
                 </div>
-            </nav>
-        {% else %}
-            <nav class="navbar navbar-dark bg-dark">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="#">Iupi Hub</a>
-                    <ul class="nav justify-content-end">
-                        <li class="nav-item">
-                            <a class="nav-link active"
-                               aria-current="page"
-                               href="{% url 'home:index' %}">Home</a
-                                >
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'courses:all_courses' %}">Courses</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'professors:all_professors' %}">Profesores</a
-                                    >
-                                </li>
-                                <li>
-                                    <div class="login-buttons">
-                                        <a href="{% url 'accounts:login' %}">
-                                            <button class="btn btn-outline-light" type="button">Log In</button>
-                                        </a>
-                                        <a href="{% url 'accounts:register' %}">
-                                            <button class="btn btn-outline-light" type="button">Register</button>
-                                        </a>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </nav>
-                {% endif %}
+                <div>
+                    <h1 class="hidden title text-xl text-black md:block">University Hub</h1>
+                </div>
+            </div>
+            <!-- links section -->
+            <div class="hidden flex-row justify-center items-center space-x-4 text-xl text-gray-700 md:flex">
+                <a href="{% url 'home:index' %}" class="link">Home</a>
+                <a href="{% url 'courses:all_courses' %}" class="link">Cursos</a>
+                <a href="{% url 'professors:all_professors' %}" class="link">Profesores</a>
+                <a href="#" class="link">Confesiones</a>
+            </div>
+            <!-- login or signin -->
+            <div class="hidden flex-row justify-center items-center space-x-4 text-xl md:flex">
+                <a href="" class="bg-indigo-600 text-white p-2 rounded-xl">Login</a>
+                <a href="" class="bg-indigo-600 text-white p-2 rounded-xl">Sign Up</a>
+            </div>
+            <!-- hamburguer menu -->
+            <div class="p-4 space-y-2 mr-2 md:hidden" id="mobile-hamburger">
+                <span class="hamburger-line block w-8 h-0.5 bg-gray-700"></span>
+                <span class="hamburger-line block w-8 h-0.5 bg-gray-700"></span>
+                <span class="hamburger-line block w-8 h-0.5 bg-gray-700"></span>
+            </div>
+        </div>
+        <!-- mobile menu -->
+        <div class="hidden p-3 md:hidden" id="mobile-menu">
+            <div class="flex flex-col items-center space-y-4 text-xl text-gray-700">
+                <a href="{% url 'home:index' %}" class="link">Home</a>
+                <a href="{% url 'courses:all_courses' %}" class="link">Cursos</a>
+                <a href="{% url 'professors:all_professors' %}" class="link">Profesores</a>
+                <a href="#" class="link">Confesiones</a>
+                <!-- login buttons -->
+                <div class="flex flex-row justify-center items-center space-x-4 text-xl">
+                    <a href="" class="bg-indigo-600 text-white p-2 rounded-xl">Logueate'</a>
+                    <a href="" class="bg-indigo-600 text-white p-2 rounded-xl">Registrate</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+{% endif %}
