--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -25,13 +25,14 @@
 {% else %}
     <nav>
         <div class="container flex flex-row mx-auto justify-between items-center my-4"
-            <!-- logo section -->
+             --
+             logo
+             section
+             -->
             <div class="flex flex-row justify-center items-center">
                 <div>
                     <a href="{% url 'home:index' %}">
-                        <img src="{% static 'img/logo.svg' %}"
-                            alt="logo"
-                            class="mx-4 md:mx-0"/>
+                        <img src="{% static 'img/logo.svg' %}" alt="logo" class="mx-4 md:mx-0"/>
                     </a>
                 </div>
                 <div>
